# ohtu-palautusrepo

./: README.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  komennot.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  query.py
