[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["ItsTuukka <tuukka.ylostalo@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
jsonpickle = "1.3.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
